<resources>
    <string name="app_name">Smart Cart Client</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_the_cart_id">Enter the cart ID</string>
    <string name="main_text_view">Smart Cart Application</string>
    <string name="main_button">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="welcomeText">Welcome to Smart Cart Application!</string>
    <string name="checkout">Checkout</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardExpirationDate">Expiration Date</string>
    <string name="cardCVV">CVV</string>
    <string name="cardName">Cardholder Name</string>
    <string name="cardNumberHint">1234 5678 9012 3456</string>
    <string name="cardExpirationDateHint">MM/YY</string>
    <string name="cardCVVHint">123</string>
    <string name="cardNameHint">John Doe</string>
    <string name="creditCardImage">Credit Card</string>
</resources>
