<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cartIdInput"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:fontFamily="@font/courier_prime"
        android:hint="@string/enter_the_cart_id"
        android:minHeight="48dp"
        android:padding="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/cyan"
        android:textSize="20sp"
        android:visibility="visible"
        android:layout_marginBottom="30dp"
        app:barrierDirection="top"
        app:layout_constraintBottom_toTopOf="@+id/mainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/courier_prime"
        android:layout_marginTop="50dp"
        android:padding="20sp"
        android:text="@string/main_text_view"
        android:textColor="@color/purple"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/cartIdInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:src="@drawable/logo" > </ImageView>

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/courier_prime"
        android:layout_marginTop="300dp"
        android:padding="20sp"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/cartIdInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/mainButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/courier_prime"
        android:text="@string/main_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>